# tiger

./: .gitignore  LICENSE  README.md  dune-project  generate.sh  output.s  run_postprocessing.sh  slp.sml  tiger.opam
.circleci/: ci  config.yml
btl/: runtime.c
lib/: absyn.ml  assem.ml  canon.ml  codegen.ml  color.ml  compile.ml  driver.ml  dune  env.ml  errormsg.ml  findescape.ml  flowgraph.ml  frame.ml  grammar-tail.mli_  grammar.ml  grammar.mli  grammar.mly  grammar.output  grammer-head.mli_  graph.ml  lexer.ml  lexer.mll  liveliness.ml  liveness.ml  makegraph.ml  parser.ml  regalloc.ml  semant.ml  slp.ml  symbol.ml  table.ml  temp.ml  translate.ml  tree.ml  types.ml
lib/lexer/: dune  errormsg.ml  lexer.ml  lexer.mll
lib/parser/: absyn.ml  dune  errormsg.ml  grammar.ml  grammar.mli  grammar.mly  lexer.ml  lexer.mll  parser.ml  symbol.ml  tokens.ml  translate.ml
test/: dune
test_lib/: dune  integration.ml
tests/: merge.tig  mergesort.tig  queens.tig  test-chr-ord.tig  test-closure1.tig  test-closure2.tig  test-exit.tig  test-let-return-unit.tig  test-record.tig  test-string-operations.tig  test-type-synonyms.tig  test1.tig
tests/codegen/: test_for_loop.tig  test_simple_function_call_with_addition.tig  test_while_loop.tig
tests/codegen/expected/: test_for_loop.s  test_if_statement.s  test_simple_function_call_with_addition.s  test_while_loop.s
tests/codegen/input/: test_if_statement.tig  test_simple_function_call_with_addition.tig
tests/errors/: duplicate-fn-name.tig  duplicate-type-declaration.tig
tests/integration/expected/: test-array-in-record.output  test-chr-ord.output  test-closure2.output  test-closure3.output  test-coalesce-spilled-variables.output  test-cons-list.output  test-record.output  test-shadowing2.output  test-string-operations.output
tests/integration/input/: queens.tig  test-array-in-record.tig  test-array-of-records.tig  test-chr-ord.tig  test-closure1.tig  test-closure3.tig  test-coalesce-spilled-variables.tig  test-cons-list.tig  test-exit.tig  test-fn-many-args.tig  test-for-loop-break.tig  test-mutually-recursive-functions.tig  test-shadowing.tig  test-shadowing2.tig  test-string-array.tig  test-string-comparison.tig  test-string-operations.tig  test-type-synonyms.tig  test-while-loop-break.tig  test-while-loop.tig
tests/parse/: test1.tig  test10.tig  test11.tig  test13.tig  test14.tig  test15.tig  test16.tig  test17.tig  test18.tig  test19.tig  test2.tig  test20.tig  test21.tig  test22.tig  test23.tig  test24.tig  test25.tig  test26.tig  test28.tig  test29.tig  test30.tig  test31.tig  test32.tig  test33.tig  test34.tig  test35.tig  test36.tig  test40.tig  test42.tig  test45.tig  test9.tig
