(library
 (name tiger)
 (libraries
  base
  core
  core_unix
  stdio
  str
  batteries
  expect_test_helpers_core
  ppx_show.runtime)
 (inline_tests)
 (preprocess
  (pps
   ppx_sexp_conv
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_inline_test
   ppx_assert
   ppx_expect
   ppx_here)))

(env
 (dev
  (flags
   ; Disabled warnings
   ; 30: duplicate-definitions (We use similar names in some record fields)
   (:standard -w -30-27))))
